test/bad/generics/call04.px

func f<T>(T->T g) def
    return

f(min)
